microk8.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: mynginx:local
        imagePullPolicy: Never
        ports:
        - containerPort: 80

apiVersion: v1
kind: Pod
metadata:
  name: gitlab
spec:
  containers:
    - name: gitlab
      image: gitlab/gitlab-ce:latest
      imagePullPolicy: Always
      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
        - "gitlab.example.com"
      ports:
      - name: http
        port: 80
        targetPort: 80
      - name: https
        port: 443
        targetPort: 443
      - name: ssh 
        port: 22
        targetPort: 22
      volumeMounts:
      - mountPath: "/etc/gitlab"
        name: etc
      - mountPath: "/var/log/gitlab"
        name: logs
      - mountPath: "/var/opt/gitlab"
        name: opt
      volumes:
    - name: logs
      persistentVolumeClaim:
       claimName: gitlab-volumeclaim
    - name: etc
      persistentVolumeClaim:
       claimName: gitlab-volumeclaim
    - name: opt
      persistentVolumeClaim:
       claimName: gitlab-volumeclaim
    

apiVersion: v1
kind: Pod
metadata:
  name: todoapp
spec:
  containers:
    - name: todoapp
      image: localhost:32000/todoapp:registry
      imagePullPolicy: Always
      ports:
        - containerPort: 3000

apiVersion: mongodb.com/v1
kind: MongoDB
metadata:
  name: MongoDB
spec:
  members: 3
  version: 4.2.2-ent
  opsManager:
    configMapRef:
      name: <configMap.metadata.name>
            # Must match metadata.name in ConfigMap file
  credentials: <mycredentials>
  type: ReplicaSet
  persistent: true


apiVersion: v1
kind: volume
metadata:
  name: volumeForAllApplications
spec:
  storageClassName: volumeForAllApplications 
  capacity:
    storage: 100Mi
  accessModes:
    - ReadWriteOnce
  hostPath:
    path: "/mnt/persistent-volume"

apiVersion: v1
kind: PersistentVolumeClaim
apiVersion: v1
metadata:
  name: gitlab-volumeclaim
spec:
  storageClassName: slow
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 10Mi
