production.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: todoapp
  name: todoapp
spec:
  type: NodePort
  ports:
    - nodeport: 31131
      port: 3000
      targetPort: 3000
  selector:
    name: todoapp
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mongo
  name: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: mongo
