test.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: todoapp-test
  name: todoapp-test
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    name: todoapp-test
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mongo-test
    namespace: test
  name: mongo-test
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: mongo-test
